--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="pt-br">
 <head>
@@ -7,7 +6,7 @@
 <title>RIC AI — CRION</title>
 <style>
   :root{
-    /* Paleta pedida */
+    /* Paleta */
     --alert:#fe0000;
     --sites:#0001fc;
     --procs:#fe6700;
@@ -21,11 +20,11 @@
     --muted:#64748b;
     --line:#e7eef7;
 
-    /* Fundo geral #4889c5 com leve vinheta */
+    /* Fundo */
     --bg1:#4889c5;
     --bg2:#3f7eb9;
 
-    /* PDFs – laranja bem clarinho */
+    /* PDFs – laranja clarinho */
     --pdf-bg:#fff7ed;      /* orange-50 */
     --pdf-bd:#ffedd5;      /* orange-100 */
   }
@@ -45,8 +44,8 @@
     position:fixed; z-index:50;
     left:50%; transform:translateX(-50%);
     top:14px;
-    width:calc(1260px + 32px);       /* = max-width da wrap + padding lateral (16+16) */
-    max-width:calc(100% - 32px);     /* respeita margens laterais em telas menores */
+    width:calc(1260px + 32px);       /* wrap + paddings laterais (16+16) */
+    max-width:calc(100% - 32px);     /* respeita bordas em telas menores */
     display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:12px;
     pointer-events:none;
   }
@@ -102,7 +101,7 @@
   #affixList .affix-prev{display:none;margin-top:8px;border-radius:10px;overflow:hidden;border:1px solid var(--pdf-bd);background:#fff}
   #affixList iframe{width:100%;height:520px;border:0;background:#fff}
 
-  /* Animações “bolinhas” */
+  /* Bolinhas */
   .busy{display:flex;align-items:center;gap:10px}
   .dots{display:inline-block;width:36px;height:10px;position:relative}
   .dots i{position:absolute;left:0;top:0;width:8px;height:8px;border-radius:50%;background:#94a3b8;animation:bounce 0.85s infinite}
@@ -115,9 +114,7 @@
   @keyframes load{0%{left:-100%;right:100%}50%{left:0;right:0}100%{left:100%;right:-100%}}
 
   /* RR.png sem “janela” */
-  .rr-holder{
-    display:grid; place-items:center; padding:0; background:transparent; border:0; box-shadow:none;
-  }
+  .rr-holder{display:grid; place-items:center; padding:0; background:transparent; border:0; box-shadow:none;}
   .rr-holder img{max-width:520px;width:100%;height:auto;filter:drop-shadow(0 20px 40px rgba(80,217,205,.24))}
 
   footer{margin:18px 0 6px;text-align:center}
@@ -126,9 +123,8 @@
 </head>
 <body>
 
-  <!-- TOPO FLUTUANTE (agora alinhado à largura das caixas) -->
+  <!-- TOPO FLUTUANTE (alinhado ao conteúdo) -->
   <div class="floatbar">
-    <!-- Esquerda: icon2 (logo CRION pequeno) -->
     <img class="logo-left" src="icon2.png"
          onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/icon2.png';"
          alt="icon2">
@@ -151,7 +147,6 @@
       </button>
     </div>
 
-    <!-- Direita: HDS -->
     <img class="logo-right" src="HDS.png"
          onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';"
          alt="HDSTEC">
@@ -195,14 +190,14 @@
         <div id="affixList" class="out">—</div>
       </section>
 
-      <!-- RR.png (abaixo do Alerta) -->
+      <!-- RR.png -->
       <div class="rr-holder">
         <img src="rr.png"
              onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/rr.png';"
              alt="Olá, meu nome é RIC. Precisa de uma ajuda?">
       </div>
 
-      <!-- PROCEDIMENTOS (abaixo de Sites) -->
+      <!-- PROCEDIMENTOS -->
       <section class="card">
         <div class="tag procs">Procedimentos</div>
         <h2>CRION COMERCIAL (AFFIX, ALTER e CONECTA PLAN)</h2>
@@ -261,7 +256,6 @@
 
 <script>
 /* ======= CONFIG ======= */
-/* NÃO alteramos o GAS. Mantemos seu Web App: */
 const APP_URL = "https://script.google.com/macros/s/AKfycbxnTEhSw1u5Ib0jCqJsURoZM30VfCpfeqKqKvYpXdKgJDUPrw8Q8hScbSzw4zVkI7u0rw/exec";
 
 /* ======= HELPERS ======= */
@@ -272,7 +266,6 @@ function cleanName(n){ return String(n||'').replace(/^(OCR_TMP_|TMP_SLIDES_)+/ig
 function link(url, txt){ return `<a href="${url}" target="_blank" rel="noopener">${esc(txt||url)}</a>`; }
 function humanSize(b){ if(!b||b<=0) return "—"; const u=["B","KB","MB","GB"]; let i=0; while(b>=1024&&i<u.length-1){ b/=1024; i++; } return b.toFixed(1)+" "+u[i]; }
 
-/* ======= CHAMADAS ======= */
 function call(endpoint, payload){
   const url = APP_URL + "?fn=" + encodeURIComponent(endpoint);
   return fetch(url, {
@@ -333,7 +326,6 @@ async function loadAffixCSV(){
   const text = await res.text();
   AFFIX_PDFS = parseAffixCSV(text);
 }
-
 function parseAffixCSV(text){
   const lines = text.trim().split(/\r?\n/);
   if (!lines.length) return [];
@@ -349,18 +341,15 @@ function parseAffixCSV(text){
   }
   return out;
 }
-
 function toggleAffixPrev(i){
   const el = document.getElementById("affix_prev_" + i);
   if (!el) return;
   el.style.display = (el.style.display === "none" || !el.style.display) ? "block" : "none";
 }
-
 function pdfjsURL(fileUrl){
-  // Usa o viewer local do PDF.js (sem download automático)
+  // usa o viewer local do PDF.js
   return "pdfjs/web/viewer.html?file=" + encodeURIComponent(fileUrl);
 }
-
 async function searchAffixPDFs(q){
   const list  = $('#affixList');
   const badge = $('#affixCount');
