--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   /* ===== TOPO FLUTUANTE (alinhado à wrap) ===== */
   .floatbar{
-    position:fixed; z-index:50;
+    z-index:50;
     left:50%; transform:translateX(-50%);
     top:14px;
     width:calc(1260px + 32px);      /* max-width da wrap + padding (16+16) */
@@ -66,7 +66,7 @@
   .tool svg{width:22px;height:22px}
 
   /* ===== CONTEÚDO ===== */
-  .wrap{max-width:1260px;margin:100px auto 24px;padding:0 16px}
+  .wrap{max-width:1260px;margin:96px auto 24px;padding:0 16px}
   .grid{display:grid;grid-template-columns:1fr 1fr;gap:18px}
   @media (max-width:980px){ .grid{grid-template-columns:1fr} }
 
