--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
 <head>
 <meta charset="utf-8"/>
@@ -6,7 +6,7 @@
 <title>RIC AI — CRION</title>
 <style>
   :root{
-    /* Paleta pedida */
+    /* Paleta do seu código original */
     --alert:#fe0000;
     --sites:#0001fc;
     --procs:#fe6700;
@@ -20,13 +20,29 @@
     --muted:#64748b;
     --line:#e7eef7;
 
-    /* Fundo geral #4889c5 com leve vinheta */
+    /* Fundo do código original (cor única) */
     --bg1:#4889c5;
     --bg2:#3f7eb9;
 
     /* PDFs – laranja bem clarinho */
-    --pdf-bg:#fff7ed;   /* orange-50 */
-    --pdf-bd:#ffedd5;   /* orange-100 */
+    --pdf-bg:#fff7ed;   
+    --pdf-bd:#ffedd5;   
+
+    /* Estilos do novo header (mantidos) */
+    --base-font:12px;
+    --brand:#2882bb; 
+    --brand2:#2a8fcf;
+    --bg:#f7f8fc; 
+    --ink:#0f172a; 
+    --muted:#667085; 
+    --line:#E7EAF3;
+    --lime:#22c55e; 
+    --lime2:#a3e635; 
+    --danger:#ef4444;
+    --tag:#F2E7FF; 
+    --tag-ink:#6D28D9; 
+    --tag-shadow:0 4px 10px rgba(40,130,187,.18);
+    --card-shadow:0 18px 36px rgba(99,102,241,.12), 0 8px 24px rgba(40,130,187,.10);
   }
 
   *{box-sizing:border-box}
@@ -34,39 +50,42 @@
   body{
     margin:0;color:var(--ink);
     font:14px/1.6 ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Arial;
-    background:
-      radial-gradient(1200px 520px at 15% -10%, #ffffff18 0, #ffffff0a 50%, #0000 80%),
-      linear-gradient(180deg, var(--bg1), var(--bg2));
+    background: var(--bg1);
   }
 
-  /* ===== TOPO FLUTUANTE (alinhado à wrap) ===== */
-  .floatbar{
-    position:fixed; z-index:50;
-    left:50%; transform:translateX(-50%);
-    top:14px;
-    width:calc(1260px + 32px);      /* max-width da wrap + padding (16+16) */
-    max-width:calc(100% - 32px);    /* respeita bordas em telas menores */
-    display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:12px;
-    pointer-events:none;
+  /* ====== HEADER (do segundo código) ====== */
+  .hero{
+    display:flex; align-items:center; gap:12px;
+    border-radius:18px; padding:12px 16px; color:#fff;
+    background:linear-gradient(135deg,var(--brand),var(--brand2));
+    box-shadow:0 24px 56px rgba(40,130,187,.22);
+    min-height:78px;
   }
-  .floatbar > *{ pointer-events:auto; }
+  .hero-left{display:flex; align-items:center; gap:10px}
+  .hero-center{flex:1}           /* vazio por requisito */
+  .hero-right{display:flex; align-items:center; gap:12px}
 
-  .logo-left{height:44px; object-fit:contain; filter:drop-shadow(0 4px 10px #0002)}
-  .logo-right{height:46px; justify-self:end; object-fit:contain; filter:drop-shadow(0 4px 10px #0002)}
+  .logo-left{height:44px; object-fit:contain; filter:drop-shadow(0 2px 6px #0002)}
+  .logo-hds{height:44px; object-fit:contain; filter:drop-shadow(0 2px 6px #0002)}
 
-  .tools{display:flex; gap:10px; justify-self:end}
-  .tool{
-    width:44px;height:44px;border-radius:14px;border:1px solid #ffffff70;
-    display:grid;place-items:center; backdrop-filter:blur(3px);
-    box-shadow:0 10px 22px #0002; cursor:pointer; transition:.15s; outline:none;
+  .iconbtn{
+    width:36px;height:36px;border-radius:12px;border:1px solid #ffffff40;
+    display:grid;place-items:center; cursor:pointer; backdrop-filter:blur(4px);
+    transition:.15s; box-shadow:0 6px 14px rgba(0,0,0,.15)
   }
-  .tool:hover{transform:translateY(-1px)}
-  .tool-postit{background:var(--postit)}
-  .tool-calc{background:var(--calc)}
-  .tool svg{width:22px;height:22px}
+  .iconbtn:hover{transform:translateY(-1px)}
+  .icon-note{background:#ffd95e}
+  .icon-calc{background:#60a5fa}
+  .iconbtn svg{display:block}
+
+  @media (max-width:980px){
+    .logo-left{height:34px}
+    .logo-hds{height:34px}
+    .iconbtn{width:34px;height:34px}
+  }
 
   /* ===== CONTEÚDO ===== */
-  .wrap{max-width:1260px;margin:96px auto 24px;padding:0 16px}
+  .wrap{max-width:1260px;margin:16px auto 24px;padding:0 16px}
   .grid{display:grid;grid-template-columns:1fr 1fr;gap:18px}
   @media (max-width:980px){ .grid{grid-template-columns:1fr} }
 
@@ -125,32 +144,35 @@
 </head>
 <body>
 
-    <div class="floatbar">
-        <img class="logo-left" src="https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/icon2.png"
-         alt="icon2">
-
-    <div class="tools">
-            <button id="toggleNote" class="tool tool-postit" title="Post-it">
-        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3Z" stroke="#222" stroke-width="2" fill="#fde68a"/>
-          <path d="M19 13h-4a3 3 0 0 0-3 3v4" stroke="#222" stroke-width="2"/>
-        </svg>
-      </button>
-            <button id="toggleCalc" class="tool tool-calc" title="Calculadora">
-        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <rect x="4" y="3" width="16" height="18" rx="2" stroke="#0b2555" stroke-width="2" fill="#dbeafe"/>
-          <rect x="7" y="6" width="10" height="3" rx="1" fill="#0b2555"/>
-          <path d="M8 12h2M8 16h2M12 12h2M12 16h2M16 12h2M16 16h2" stroke="#0b2555" stroke-width="2"/>
-        </svg>
-      </button>
+    <div class="wrap">
+    <div class="hero">
+      <div class="hero-left">
+        <img class="logo-left" src="icon2.png"
+             onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/icon2.png';"
+             alt="Logo esquerdo">
+      </div>
+      <div class="hero-center"></div>
+      <div class="hero-right">
+        <button id="toggleNote" type="button" class="iconbtn icon-note" title="Post-it">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3Z" stroke="#1f2937" stroke-width="2" fill="#fde68a"/>
+            <path d="M19 13h-4a3 3 0 0 0-3 3v4" stroke="#1f2937" stroke-width="2"/>
+          </svg>
+        </button>
+        <button id="toggleCalc" type="button" class="iconbtn icon-calc" title="Calculadora">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <rect x="4" y="3" width="16" height="18" rx="2" stroke="#0b2555" stroke-width="2" fill="#dbeafe"/>
+            <rect x="7" y="6" width="10" height="3" rx="1" fill="#0b2555"/>
+            <path d="M8 12h2M8 16h2M12 12h2M12 16h2M16 12h2M16 16h2" stroke="#0b2555" stroke-width="2"/>
+          </svg>
+        </button>
+        <img class="logo-hds" src="HDS.png"
+             onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';"
+             alt="HDSTEC">
+      </div>
     </div>
 
-        <img class="logo-right" src="https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png"
-         alt="HDSTEC">
-  </div>
-
-  <div class="wrap">
-    <div class="grid">
+        <div class="grid">
             <section class="card">
         <div class="tag alertas">Alertas</div>
         <h2>Controle de alerta</h2>
@@ -185,7 +207,8 @@
       </section>
 
             <div class="rr-holder">
-        <img src="https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/rr.png"
+        <img src="rr.png"
+             onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/rr.png';"
              alt="Olá, meu nome é RIC. Precisa de uma ajuda?">
       </div>
 
@@ -246,7 +269,6 @@
 
 <script>
 /* ======= CONFIG ======= */
-/* NÃO alteramos o GAS. Mantemos seu Web App: */
 const APP_URL = "https://script.google.com/macros/s/AKfycbxnTEhSw1u5Ib0jCqJsURoZM30VfCpfeqKqKvYpXdKgJDUPrw8Q8hScbSzw4zVkI7u0rw/exec";
 
 /* ======= HELPERS ======= */
